--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		</p>
 		</td>
 		<td class="auto-style2" style="height: 121px; width: 800px;">
-		<img alt="" height="180" src="./download%20(3).png" width="280" />
-		<img alt="" height="180" src="./N_TV1tGl_400x400.png" width="280" class="auto-style3" />
+		<img alt="" height="180" src="./pictures/img_one.png" width="280" />
+		<img alt="" height="180" src="./pictures/img_two.png" width="280" class="auto-style3" />
 		</td>
 	</tr>
 	<tr>
